Prove at runtime which JAR supplied the subject connector's classes
The static entry-class check shows what could load; this records what
did (review finding F3). Every Flink JVM now logs its class loads with
-Xlog:class+load to one file per container incarnation in the attempt
directory, which survives killed and replaced TaskManagers. The option
goes through env.java.opts.jobmanager or env.java.opts.taskmanager.
Overriding env.java.opts.all dropped the image's --add-opens flags and
broke job submission, and a quoted value reached the JVM with its
quotes.

After the process fence, SubjectClassOrigins reads which source each
process loaded KafkaSource and KafkaSink from. The evidence is confirmed
only if every load came from the subject primary's lib path and a
TaskManager loaded both classes. Otherwise a passing oracle becomes
inconclusive with subject.connector.origin-mismatch or
subject.connector.origin-unconfirmed; a failing oracle stays fail. A PASS
result cannot be constructed without confirmed origins. The JSON summary
reports evidence.subjectClasses, and SPEC-001 R5.6d and SPEC-005 SV-183d
describe the rule.

In Docker, bounded-eos and selftest-duplicates confirmed the released
connector in the JobManager and both TaskManager incarnations.

Those runs also exposed a flaky negative control: one run produced only
18 duplicates. The REST checkpoint count lagged completion by almost 3s,
so the kill landed 108 ms after checkpoint 2. The 10s checkpoint interval
that widens the window now lives in FU-3 with the control itself (review
finding R9).

Generated-by: Claude Code (Claude Opus 5.5)